docs/api/v/2022.0.5/bytes.md
#![](../../../../images/luxe-dark.svg){width="96em"}

# `luxe` API (`2022.0.5`)  


---

## `luxe: bytes` module

- [Byter](#byter)   
- [Bytes](#bytes)   
- [BytesReader](#bytesreader)   
- [BytesWriter](#byteswriter)   
- [Floats](#floats)   
- [Uint16](#uint16)   

---

### Byter
`:::js import "luxe: bytes" for Byter`
> no docs found

- [pos](#Byter.pos)
- [inner](#Byter.inner)
- [new](#Byter.new)(**size**: `Any`)
- [bytes](#Byter.bytes)()
- [write_string](#Byter.write_string)(**string**: `Any`)
- [write_string](#Byter.write_string+2)(**string**: `Any`, **length**: `Any`)
- [write_string_aligned4](#Byter.write_string_aligned4)(**string**: `Any`)
- [write_int8](#Byter.write_int8)(**value**: `Any`)
- [write_uint8](#Byter.write_uint8)(**value**: `Any`)
- [write_int16](#Byter.write_int16)(**value**: `Any`)
- [write_int32](#Byter.write_int32)(**value**: `Any`)
- [write_int64](#Byter.write_int64)(**value**: `Any`)
- [write_uint16](#Byter.write_uint16)(**value**: `Any`)
- [write_uint32](#Byter.write_uint32)(**value**: `Any`)
- [write_uint64](#Byter.write_uint64)(**value**: `Any`)
- [write_float32](#Byter.write_float32)(**value**: `Any`)
- [write_float64](#Byter.write_float64)(**value**: `Any`)
- [write_uuid](#Byter.write_uuid)(**uuid**: `Any`)

<hr/>
<endpoint module="luxe: bytes" class="Byter" signature="pos"></endpoint>
<signature id="Byter.pos">Byter.pos
<a class="headerlink" href="#Byter.pos" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="inner"></endpoint>
<signature id="Byter.inner">Byter.inner
<a class="headerlink" href="#Byter.inner" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="new(size : Any)"></endpoint>
<signature id="Byter.new">Byter.new(**size**: `Any`)
<a class="headerlink" href="#Byter.new" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js Byter`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="bytes()"></endpoint>
<signature id="Byter.bytes">Byter.bytes()
<a class="headerlink" href="#Byter.bytes" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="write_string(string : Any)"></endpoint>
<signature id="Byter.write_string">Byter.write_string(**string**: `Any`)
<a class="headerlink" href="#Byter.write_string" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="write_string(string : Any, length : Any)"></endpoint>
<signature id="Byter.write_string+2">Byter.write_string(**string**: `Any`, **length**: `Any`)
<a class="headerlink" href="#Byter.write_string+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="write_string_aligned4(string : Any)"></endpoint>
<signature id="Byter.write_string_aligned4">Byter.write_string_aligned4(**string**: `Any`)
<a class="headerlink" href="#Byter.write_string_aligned4" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="write_int8(value : Any)"></endpoint>
<signature id="Byter.write_int8">Byter.write_int8(**value**: `Any`)
<a class="headerlink" href="#Byter.write_int8" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="write_uint8(value : Any)"></endpoint>
<signature id="Byter.write_uint8">Byter.write_uint8(**value**: `Any`)
<a class="headerlink" href="#Byter.write_uint8" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="write_int16(value : Any)"></endpoint>
<signature id="Byter.write_int16">Byter.write_int16(**value**: `Any`)
<a class="headerlink" href="#Byter.write_int16" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="write_int32(value : Any)"></endpoint>
<signature id="Byter.write_int32">Byter.write_int32(**value**: `Any`)
<a class="headerlink" href="#Byter.write_int32" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="write_int64(value : Any)"></endpoint>
<signature id="Byter.write_int64">Byter.write_int64(**value**: `Any`)
<a class="headerlink" href="#Byter.write_int64" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="write_uint16(value : Any)"></endpoint>
<signature id="Byter.write_uint16">Byter.write_uint16(**value**: `Any`)
<a class="headerlink" href="#Byter.write_uint16" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="write_uint32(value : Any)"></endpoint>
<signature id="Byter.write_uint32">Byter.write_uint32(**value**: `Any`)
<a class="headerlink" href="#Byter.write_uint32" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="write_uint64(value : Any)"></endpoint>
<signature id="Byter.write_uint64">Byter.write_uint64(**value**: `Any`)
<a class="headerlink" href="#Byter.write_uint64" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="write_float32(value : Any)"></endpoint>
<signature id="Byter.write_float32">Byter.write_float32(**value**: `Any`)
<a class="headerlink" href="#Byter.write_float32" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="write_float64(value : Any)"></endpoint>
<signature id="Byter.write_float64">Byter.write_float64(**value**: `Any`)
<a class="headerlink" href="#Byter.write_float64" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Byter" signature="write_uuid(uuid : Any)"></endpoint>
<signature id="Byter.write_uuid">Byter.write_uuid(**uuid**: `Any`)
<a class="headerlink" href="#Byter.write_uuid" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

### Bytes
`:::js import "luxe: bytes" for Bytes`
> no docs found

- [new](#Bytes.new)(**elements**: `Any`)
- [length](#Bytes.length)
- [[index : Any]](#Bytes.[index : Any])
- [[index : Any]](#Bytes.[index : Any]=)=(value : Any)
- [from_string](#Bytes.from_string)(**string**: `Any`)
- [set_from](#Bytes.set_from)(**other**: `Any`)
- [copy](#Bytes.copy+3)(**other**: `Any`, **at**: `Any`, **length**: `Any`)
- [copy](#Bytes.copy+4)(**other**: `Any`, **to**: `Any`, **from**: `Any`, **length**: `Any`)
- [set_string](#Bytes.set_string+2)(**at**: `Any`, **value**: `Any`)
- [set_string](#Bytes.set_string+3)(**at**: `Any`, **value**: `Any`, **length**: `Any`)
- [get_string](#Bytes.get_string+2)(**at**: `Any`, **length**: `Any`)
- [set_int8](#Bytes.set_int8+2)(**at**: `Any`, **value**: `Any`)
- [set_int16](#Bytes.set_int16+2)(**at**: `Any`, **value**: `Any`)
- [set_int32](#Bytes.set_int32+2)(**at**: `Any`, **value**: `Any`)
- [set_int64](#Bytes.set_int64+2)(**at**: `Any`, **value**: `Any`)
- [set_uint8](#Bytes.set_uint8+2)(**at**: `Any`, **value**: `Any`)
- [set_uint16](#Bytes.set_uint16+2)(**at**: `Any`, **value**: `Any`)
- [set_uint32](#Bytes.set_uint32+2)(**at**: `Any`, **value**: `Any`)
- [set_uint64](#Bytes.set_uint64+2)(**at**: `Any`, **value**: `Any`)
- [set_float32](#Bytes.set_float32+2)(**at**: `Any`, **value**: `Any`)
- [set_float64](#Bytes.set_float64+2)(**at**: `Any`, **value**: `Any`)
- [get_int8](#Bytes.get_int8)(**at**: `Any`)
- [get_int16](#Bytes.get_int16)(**at**: `Any`)
- [get_int32](#Bytes.get_int32)(**at**: `Any`)
- [get_int64](#Bytes.get_int64)(**at**: `Any`)
- [get_uint8](#Bytes.get_uint8)(**at**: `Any`)
- [get_uint16](#Bytes.get_uint16)(**at**: `Any`)
- [get_uint32](#Bytes.get_uint32)(**at**: `Any`)
- [get_uint64](#Bytes.get_uint64)(**at**: `Any`)
- [get_float32](#Bytes.get_float32)(**at**: `Any`)
- [get_float64](#Bytes.get_float64)(**at**: `Any`)
- [get](#Bytes.get)(**at**: `Any`)
- [set](#Bytes.set+2)(**at**: `Any`, **value**: `Any`)
- [bytes](#Bytes.bytes)()
- [clear](#Bytes.clear)()
- [padding](#Bytes.padding+2)(**length**: `Any`, **align**: `Any`)
- [padding](#Bytes.padding)(**length**: `Any`)

<hr/>
<endpoint module="luxe: bytes" class="Bytes" signature="new(elements : Any)"></endpoint>
<signature id="Bytes.new">Bytes.new(**elements**: `Any`)
<a class="headerlink" href="#Bytes.new" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js Bytes`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="length"></endpoint>
<signature id="Bytes.length">Bytes.length
<a class="headerlink" href="#Bytes.length" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="[index : Any]"></endpoint>
<signature id="Bytes.[index : Any]">Bytes [index : Any]
<a class="headerlink" href="#Bytes.[index : Any]" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="[index : Any]=(value : Any)"></endpoint>
<signature id="Bytes.[index : Any]=">Bytes [index : Any]=(value : Any)
<a class="headerlink" href="#Bytes.[index : Any]=" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="from_string(string : Any)"></endpoint>
<signature id="Bytes.from_string">Bytes.from_string(**string**: `Any`)
<a class="headerlink" href="#Bytes.from_string" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="set_from(other : Any)"></endpoint>
<signature id="Bytes.set_from">Bytes.set_from(**other**: `Any`)
<a class="headerlink" href="#Bytes.set_from" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="copy(other : Any, at : Any, length : Any)"></endpoint>
<signature id="Bytes.copy+3">Bytes.copy(**other**: `Any`, **at**: `Any`, **length**: `Any`)
<a class="headerlink" href="#Bytes.copy+3" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="copy(other : Any, to : Any, from : Any, length : Any)"></endpoint>
<signature id="Bytes.copy+4">Bytes.copy(**other**: `Any`, **to**: `Any`, **from**: `Any`, **length**: `Any`)
<a class="headerlink" href="#Bytes.copy+4" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="set_string(at : Any, value : Any)"></endpoint>
<signature id="Bytes.set_string+2">Bytes.set_string(**at**: `Any`, **value**: `Any`)
<a class="headerlink" href="#Bytes.set_string+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="set_string(at : Any, value : Any, length : Any)"></endpoint>
<signature id="Bytes.set_string+3">Bytes.set_string(**at**: `Any`, **value**: `Any`, **length**: `Any`)
<a class="headerlink" href="#Bytes.set_string+3" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="get_string(at : Any, length : Any)"></endpoint>
<signature id="Bytes.get_string+2">Bytes.get_string(**at**: `Any`, **length**: `Any`)
<a class="headerlink" href="#Bytes.get_string+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="set_int8(at : Any, value : Any)"></endpoint>
<signature id="Bytes.set_int8+2">Bytes.set_int8(**at**: `Any`, **value**: `Any`)
<a class="headerlink" href="#Bytes.set_int8+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="set_int16(at : Any, value : Any)"></endpoint>
<signature id="Bytes.set_int16+2">Bytes.set_int16(**at**: `Any`, **value**: `Any`)
<a class="headerlink" href="#Bytes.set_int16+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="set_int32(at : Any, value : Any)"></endpoint>
<signature id="Bytes.set_int32+2">Bytes.set_int32(**at**: `Any`, **value**: `Any`)
<a class="headerlink" href="#Bytes.set_int32+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="set_int64(at : Any, value : Any)"></endpoint>
<signature id="Bytes.set_int64+2">Bytes.set_int64(**at**: `Any`, **value**: `Any`)
<a class="headerlink" href="#Bytes.set_int64+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="set_uint8(at : Any, value : Any)"></endpoint>
<signature id="Bytes.set_uint8+2">Bytes.set_uint8(**at**: `Any`, **value**: `Any`)
<a class="headerlink" href="#Bytes.set_uint8+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="set_uint16(at : Any, value : Any)"></endpoint>
<signature id="Bytes.set_uint16+2">Bytes.set_uint16(**at**: `Any`, **value**: `Any`)
<a class="headerlink" href="#Bytes.set_uint16+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="set_uint32(at : Any, value : Any)"></endpoint>
<signature id="Bytes.set_uint32+2">Bytes.set_uint32(**at**: `Any`, **value**: `Any`)
<a class="headerlink" href="#Bytes.set_uint32+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="set_uint64(at : Any, value : Any)"></endpoint>
<signature id="Bytes.set_uint64+2">Bytes.set_uint64(**at**: `Any`, **value**: `Any`)
<a class="headerlink" href="#Bytes.set_uint64+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="set_float32(at : Any, value : Any)"></endpoint>
<signature id="Bytes.set_float32+2">Bytes.set_float32(**at**: `Any`, **value**: `Any`)
<a class="headerlink" href="#Bytes.set_float32+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="set_float64(at : Any, value : Any)"></endpoint>
<signature id="Bytes.set_float64+2">Bytes.set_float64(**at**: `Any`, **value**: `Any`)
<a class="headerlink" href="#Bytes.set_float64+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="get_int8(at : Any)"></endpoint>
<signature id="Bytes.get_int8">Bytes.get_int8(**at**: `Any`)
<a class="headerlink" href="#Bytes.get_int8" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="get_int16(at : Any)"></endpoint>
<signature id="Bytes.get_int16">Bytes.get_int16(**at**: `Any`)
<a class="headerlink" href="#Bytes.get_int16" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="get_int32(at : Any)"></endpoint>
<signature id="Bytes.get_int32">Bytes.get_int32(**at**: `Any`)
<a class="headerlink" href="#Bytes.get_int32" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="get_int64(at : Any)"></endpoint>
<signature id="Bytes.get_int64">Bytes.get_int64(**at**: `Any`)
<a class="headerlink" href="#Bytes.get_int64" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="get_uint8(at : Any)"></endpoint>
<signature id="Bytes.get_uint8">Bytes.get_uint8(**at**: `Any`)
<a class="headerlink" href="#Bytes.get_uint8" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="get_uint16(at : Any)"></endpoint>
<signature id="Bytes.get_uint16">Bytes.get_uint16(**at**: `Any`)
<a class="headerlink" href="#Bytes.get_uint16" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="get_uint32(at : Any)"></endpoint>
<signature id="Bytes.get_uint32">Bytes.get_uint32(**at**: `Any`)
<a class="headerlink" href="#Bytes.get_uint32" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="get_uint64(at : Any)"></endpoint>
<signature id="Bytes.get_uint64">Bytes.get_uint64(**at**: `Any`)
<a class="headerlink" href="#Bytes.get_uint64" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="get_float32(at : Any)"></endpoint>
<signature id="Bytes.get_float32">Bytes.get_float32(**at**: `Any`)
<a class="headerlink" href="#Bytes.get_float32" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="get_float64(at : Any)"></endpoint>
<signature id="Bytes.get_float64">Bytes.get_float64(**at**: `Any`)
<a class="headerlink" href="#Bytes.get_float64" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="get(at : Any)"></endpoint>
<signature id="Bytes.get">Bytes.get(**at**: `Any`)
<a class="headerlink" href="#Bytes.get" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="set(at : Any, value : Any)"></endpoint>
<signature id="Bytes.set+2">Bytes.set(**at**: `Any`, **value**: `Any`)
<a class="headerlink" href="#Bytes.set+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="bytes()"></endpoint>
<signature id="Bytes.bytes">Bytes.bytes()
<a class="headerlink" href="#Bytes.bytes" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="clear()"></endpoint>
<signature id="Bytes.clear">Bytes.clear()
<a class="headerlink" href="#Bytes.clear" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="padding(length : Any, align : Any)"></endpoint>
<signature id="Bytes.padding+2">Bytes.padding(**length**: `Any`, **align**: `Any`)
<a class="headerlink" href="#Bytes.padding+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Bytes" signature="padding(length : Any)"></endpoint>
<signature id="Bytes.padding">Bytes.padding(**length**: `Any`)
<a class="headerlink" href="#Bytes.padding" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

### BytesReader
`:::js import "luxe: bytes" for BytesReader`
> no docs found

- [pos](#BytesReader.pos)
- [pos](#BytesReader.pos=)=(v : Any)
- [bytes](#BytesReader.bytes)
- [new](#BytesReader.new)(**source_bytes**: `Any`)
- [from_string](#BytesReader.from_string)(**string**: `Any`)
- [skip](#BytesReader.skip)(**count**: `Any`)
- [check_bounds](#BytesReader.check_bounds)(**to_read**: `Any`)
- [get_string](#BytesReader.get_string)(**length**: `Any`)
- [get_int8](#BytesReader.get_int8)()
- [get_int16](#BytesReader.get_int16)()
- [get_int32](#BytesReader.get_int32)()
- [get_int64](#BytesReader.get_int64)()
- [get_uint8](#BytesReader.get_uint8)()
- [get_uint16](#BytesReader.get_uint16)()
- [get_uint32](#BytesReader.get_uint32)()
- [get_uint64](#BytesReader.get_uint64)()
- [get_float32](#BytesReader.get_float32)()
- [get_float64](#BytesReader.get_float64)()

<hr/>
<endpoint module="luxe: bytes" class="BytesReader" signature="pos"></endpoint>
<signature id="BytesReader.pos">BytesReader.pos
<a class="headerlink" href="#BytesReader.pos" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="pos=(v : Any)"></endpoint>
<signature id="BytesReader.pos=">BytesReader.pos=(v : Any)
<a class="headerlink" href="#BytesReader.pos=" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="bytes"></endpoint>
<signature id="BytesReader.bytes">BytesReader.bytes
<a class="headerlink" href="#BytesReader.bytes" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="new(source_bytes : Any)"></endpoint>
<signature id="BytesReader.new">BytesReader.new(**source_bytes**: `Any`)
<a class="headerlink" href="#BytesReader.new" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js BytesReader`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="from_string(string : Any)"></endpoint>
<signature id="BytesReader.from_string">BytesReader.from_string(**string**: `Any`)
<a class="headerlink" href="#BytesReader.from_string" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="skip(count : Any)"></endpoint>
<signature id="BytesReader.skip">BytesReader.skip(**count**: `Any`)
<a class="headerlink" href="#BytesReader.skip" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="check_bounds(to_read : Any)"></endpoint>
<signature id="BytesReader.check_bounds">BytesReader.check_bounds(**to_read**: `Any`)
<a class="headerlink" href="#BytesReader.check_bounds" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="get_string(length : Any)"></endpoint>
<signature id="BytesReader.get_string">BytesReader.get_string(**length**: `Any`)
<a class="headerlink" href="#BytesReader.get_string" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="get_int8()"></endpoint>
<signature id="BytesReader.get_int8">BytesReader.get_int8()
<a class="headerlink" href="#BytesReader.get_int8" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="get_int16()"></endpoint>
<signature id="BytesReader.get_int16">BytesReader.get_int16()
<a class="headerlink" href="#BytesReader.get_int16" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="get_int32()"></endpoint>
<signature id="BytesReader.get_int32">BytesReader.get_int32()
<a class="headerlink" href="#BytesReader.get_int32" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="get_int64()"></endpoint>
<signature id="BytesReader.get_int64">BytesReader.get_int64()
<a class="headerlink" href="#BytesReader.get_int64" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="get_uint8()"></endpoint>
<signature id="BytesReader.get_uint8">BytesReader.get_uint8()
<a class="headerlink" href="#BytesReader.get_uint8" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="get_uint16()"></endpoint>
<signature id="BytesReader.get_uint16">BytesReader.get_uint16()
<a class="headerlink" href="#BytesReader.get_uint16" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="get_uint32()"></endpoint>
<signature id="BytesReader.get_uint32">BytesReader.get_uint32()
<a class="headerlink" href="#BytesReader.get_uint32" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="get_uint64()"></endpoint>
<signature id="BytesReader.get_uint64">BytesReader.get_uint64()
<a class="headerlink" href="#BytesReader.get_uint64" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="get_float32()"></endpoint>
<signature id="BytesReader.get_float32">BytesReader.get_float32()
<a class="headerlink" href="#BytesReader.get_float32" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesReader" signature="get_float64()"></endpoint>
<signature id="BytesReader.get_float64">BytesReader.get_float64()
<a class="headerlink" href="#BytesReader.get_float64" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

### BytesWriter
`:::js import "luxe: bytes" for BytesWriter`
> no docs found

- [pos](#BytesWriter.pos)
- [pos](#BytesWriter.pos=)=(v : Any)
- [capacity](#BytesWriter.capacity)
- [bytes](#BytesWriter.bytes)
- [inner](#BytesWriter.inner)
- [new](#BytesWriter.new)(**initial_length**: `Any`)
- [resize](#BytesWriter.resize)(**new_capacity**: `Any`)
- [ensure](#BytesWriter.ensure)(**write_length**: `Any`)
- [write_string](#BytesWriter.write_string)(**string**: `Any`)
- [write_string](#BytesWriter.write_string+2)(**string**: `Any`, **length**: `Any`)
- [write_string_aligned4](#BytesWriter.write_string_aligned4)(**string**: `Any`)
- [write_int8](#BytesWriter.write_int8)(**value**: `Any`)
- [write_uint8](#BytesWriter.write_uint8)(**value**: `Any`)
- [write_int16](#BytesWriter.write_int16)(**value**: `Any`)
- [write_int32](#BytesWriter.write_int32)(**value**: `Any`)
- [write_int64](#BytesWriter.write_int64)(**value**: `Any`)
- [write_uint16](#BytesWriter.write_uint16)(**value**: `Any`)
- [write_uint32](#BytesWriter.write_uint32)(**value**: `Any`)
- [write_uint64](#BytesWriter.write_uint64)(**value**: `Any`)
- [write_float32](#BytesWriter.write_float32)(**value**: `Any`)
- [write_float64](#BytesWriter.write_float64)(**value**: `Any`)
- [write_uuid](#BytesWriter.write_uuid)(**uuid**: `Any`)

<hr/>
<endpoint module="luxe: bytes" class="BytesWriter" signature="pos"></endpoint>
<signature id="BytesWriter.pos">BytesWriter.pos
<a class="headerlink" href="#BytesWriter.pos" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="pos=(v : Any)"></endpoint>
<signature id="BytesWriter.pos=">BytesWriter.pos=(v : Any)
<a class="headerlink" href="#BytesWriter.pos=" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="capacity"></endpoint>
<signature id="BytesWriter.capacity">BytesWriter.capacity
<a class="headerlink" href="#BytesWriter.capacity" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="bytes"></endpoint>
<signature id="BytesWriter.bytes">BytesWriter.bytes
<a class="headerlink" href="#BytesWriter.bytes" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="inner"></endpoint>
<signature id="BytesWriter.inner">BytesWriter.inner
<a class="headerlink" href="#BytesWriter.inner" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="new(initial_length : Any)"></endpoint>
<signature id="BytesWriter.new">BytesWriter.new(**initial_length**: `Any`)
<a class="headerlink" href="#BytesWriter.new" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js BytesWriter`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="resize(new_capacity : Any)"></endpoint>
<signature id="BytesWriter.resize">BytesWriter.resize(**new_capacity**: `Any`)
<a class="headerlink" href="#BytesWriter.resize" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="ensure(write_length : Any)"></endpoint>
<signature id="BytesWriter.ensure">BytesWriter.ensure(**write_length**: `Any`)
<a class="headerlink" href="#BytesWriter.ensure" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="write_string(string : Any)"></endpoint>
<signature id="BytesWriter.write_string">BytesWriter.write_string(**string**: `Any`)
<a class="headerlink" href="#BytesWriter.write_string" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="write_string(string : Any, length : Any)"></endpoint>
<signature id="BytesWriter.write_string+2">BytesWriter.write_string(**string**: `Any`, **length**: `Any`)
<a class="headerlink" href="#BytesWriter.write_string+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="write_string_aligned4(string : Any)"></endpoint>
<signature id="BytesWriter.write_string_aligned4">BytesWriter.write_string_aligned4(**string**: `Any`)
<a class="headerlink" href="#BytesWriter.write_string_aligned4" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="write_int8(value : Any)"></endpoint>
<signature id="BytesWriter.write_int8">BytesWriter.write_int8(**value**: `Any`)
<a class="headerlink" href="#BytesWriter.write_int8" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="write_uint8(value : Any)"></endpoint>
<signature id="BytesWriter.write_uint8">BytesWriter.write_uint8(**value**: `Any`)
<a class="headerlink" href="#BytesWriter.write_uint8" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="write_int16(value : Any)"></endpoint>
<signature id="BytesWriter.write_int16">BytesWriter.write_int16(**value**: `Any`)
<a class="headerlink" href="#BytesWriter.write_int16" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="write_int32(value : Any)"></endpoint>
<signature id="BytesWriter.write_int32">BytesWriter.write_int32(**value**: `Any`)
<a class="headerlink" href="#BytesWriter.write_int32" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="write_int64(value : Any)"></endpoint>
<signature id="BytesWriter.write_int64">BytesWriter.write_int64(**value**: `Any`)
<a class="headerlink" href="#BytesWriter.write_int64" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="write_uint16(value : Any)"></endpoint>
<signature id="BytesWriter.write_uint16">BytesWriter.write_uint16(**value**: `Any`)
<a class="headerlink" href="#BytesWriter.write_uint16" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="write_uint32(value : Any)"></endpoint>
<signature id="BytesWriter.write_uint32">BytesWriter.write_uint32(**value**: `Any`)
<a class="headerlink" href="#BytesWriter.write_uint32" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="write_uint64(value : Any)"></endpoint>
<signature id="BytesWriter.write_uint64">BytesWriter.write_uint64(**value**: `Any`)
<a class="headerlink" href="#BytesWriter.write_uint64" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="write_float32(value : Any)"></endpoint>
<signature id="BytesWriter.write_float32">BytesWriter.write_float32(**value**: `Any`)
<a class="headerlink" href="#BytesWriter.write_float32" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="write_float64(value : Any)"></endpoint>
<signature id="BytesWriter.write_float64">BytesWriter.write_float64(**value**: `Any`)
<a class="headerlink" href="#BytesWriter.write_float64" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="BytesWriter" signature="write_uuid(uuid : Any)"></endpoint>
<signature id="BytesWriter.write_uuid">BytesWriter.write_uuid(**uuid**: `Any`)
<a class="headerlink" href="#BytesWriter.write_uuid" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

### Floats
`:::js import "luxe: bytes" for Floats`
> no docs found

- [new](#Floats.new)(**elements**: `Any`)
- [length](#Floats.length)
- [capacity](#Floats.capacity)
- [size](#Floats.size)
- [[index : Any]](#Floats.[index : Any])
- [[index : Any]](#Floats.[index : Any]=)=(value : Any)
- [resize](#Floats.resize)(**elements**: `Any`)
- [get](#Floats.get)(**at**: `Any`)
- [set](#Floats.set+2)(**at**: `Any`, **value**: `Any`)
- [set](#Floats.set+4)(**list**: `Any`, **at**: `Any`, **list_offset**: `Any`, **count**: `Any`)
- [set](#Floats.set)(**list**: `Any`)
- [ortho](#Floats.ortho+6)(**left**: `Any`, **top**: `Any`, **right**: `Any`, **bottom**: `Any`, **near**: `Any`, **far**: `Any`)
- [perspective](#Floats.perspective+4)(**fov_vertical**: `Any`, **aspect**: `Any`, **near**: `Any`, **far**: `Any`)
- [transform](#Floats.transform+9)(**px**: `Any`, **py**: `Any`, **pz**: `Any`, **rx**: `Any`, **ry**: `Any`, **rz**: `Any`, **sx**: `Any`, **sy**: `Any`, **sz**: `Any`)

<hr/>
<endpoint module="luxe: bytes" class="Floats" signature="new(elements : Any)"></endpoint>
<signature id="Floats.new">Floats.new(**elements**: `Any`)
<a class="headerlink" href="#Floats.new" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js Floats`
> no docs found   

<endpoint module="luxe: bytes" class="Floats" signature="length"></endpoint>
<signature id="Floats.length">Floats.length
<a class="headerlink" href="#Floats.length" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Floats" signature="capacity"></endpoint>
<signature id="Floats.capacity">Floats.capacity
<a class="headerlink" href="#Floats.capacity" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Floats" signature="size"></endpoint>
<signature id="Floats.size">Floats.size
<a class="headerlink" href="#Floats.size" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Floats" signature="[index : Any]"></endpoint>
<signature id="Floats.[index : Any]">Floats [index : Any]
<a class="headerlink" href="#Floats.[index : Any]" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Floats" signature="[index : Any]=(value : Any)"></endpoint>
<signature id="Floats.[index : Any]=">Floats [index : Any]=(value : Any)
<a class="headerlink" href="#Floats.[index : Any]=" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Floats" signature="resize(elements : Any)"></endpoint>
<signature id="Floats.resize">Floats.resize(**elements**: `Any`)
<a class="headerlink" href="#Floats.resize" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Floats" signature="get(at : Any)"></endpoint>
<signature id="Floats.get">Floats.get(**at**: `Any`)
<a class="headerlink" href="#Floats.get" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Floats" signature="set(at : Any, value : Any)"></endpoint>
<signature id="Floats.set+2">Floats.set(**at**: `Any`, **value**: `Any`)
<a class="headerlink" href="#Floats.set+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Floats" signature="set(list : Any, at : Any, list_offset : Any, count : Any)"></endpoint>
<signature id="Floats.set+4">Floats.set(**list**: `Any`, **at**: `Any`, **list_offset**: `Any`, **count**: `Any`)
<a class="headerlink" href="#Floats.set+4" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Floats" signature="set(list : Any)"></endpoint>
<signature id="Floats.set">Floats.set(**list**: `Any`)
<a class="headerlink" href="#Floats.set" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Floats" signature="ortho(left : Any, top : Any, right : Any, bottom : Any, near : Any, far : Any)"></endpoint>
<signature id="Floats.ortho+6">Floats.ortho(**left**: `Any`, **top**: `Any`, **right**: `Any`, **bottom**: `Any`, **near**: `Any`, **far**: `Any`)
<a class="headerlink" href="#Floats.ortho+6" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Floats" signature="perspective(fov_vertical : Any, aspect : Any, near : Any, far : Any)"></endpoint>
<signature id="Floats.perspective+4">Floats.perspective(**fov_vertical**: `Any`, **aspect**: `Any`, **near**: `Any`, **far**: `Any`)
<a class="headerlink" href="#Floats.perspective+4" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Floats" signature="transform(px : Any, py : Any, pz : Any, rx : Any, ry : Any, rz : Any, sx : Any, sy : Any, sz : Any)"></endpoint>
<signature id="Floats.transform+9">Floats.transform(**px**: `Any`, **py**: `Any`, **pz**: `Any`, **rx**: `Any`, **ry**: `Any`, **rz**: `Any`, **sx**: `Any`, **sy**: `Any`, **sz**: `Any`)
<a class="headerlink" href="#Floats.transform+9" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

### Uint16
`:::js import "luxe: bytes" for Uint16`
> no docs found

- [new](#Uint16.new)(**elements**: `Any`)
- [length](#Uint16.length)
- [[index : Any]](#Uint16.[index : Any])
- [[index : Any]](#Uint16.[index : Any]=)=(value : Any)
- [get](#Uint16.get)(**at**: `Any`)
- [set](#Uint16.set+2)(**at**: `Any`, **value**: `Any`)
- [set](#Uint16.set+4)(**list**: `Any`, **at**: `Any`, **list_offset**: `Any`, **count**: `Any`)
- [set](#Uint16.set)(**list**: `Any`)

<hr/>
<endpoint module="luxe: bytes" class="Uint16" signature="new(elements : Any)"></endpoint>
<signature id="Uint16.new">Uint16.new(**elements**: `Any`)
<a class="headerlink" href="#Uint16.new" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js Uint16`
> no docs found   

<endpoint module="luxe: bytes" class="Uint16" signature="length"></endpoint>
<signature id="Uint16.length">Uint16.length
<a class="headerlink" href="#Uint16.length" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Uint16" signature="[index : Any]"></endpoint>
<signature id="Uint16.[index : Any]">Uint16 [index : Any]
<a class="headerlink" href="#Uint16.[index : Any]" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Uint16" signature="[index : Any]=(value : Any)"></endpoint>
<signature id="Uint16.[index : Any]=">Uint16 [index : Any]=(value : Any)
<a class="headerlink" href="#Uint16.[index : Any]=" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Uint16" signature="get(at : Any)"></endpoint>
<signature id="Uint16.get">Uint16.get(**at**: `Any`)
<a class="headerlink" href="#Uint16.get" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Uint16" signature="set(at : Any, value : Any)"></endpoint>
<signature id="Uint16.set+2">Uint16.set(**at**: `Any`, **value**: `Any`)
<a class="headerlink" href="#Uint16.set+2" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Uint16" signature="set(list : Any, at : Any, list_offset : Any, count : Any)"></endpoint>
<signature id="Uint16.set+4">Uint16.set(**list**: `Any`, **at**: `Any`, **list_offset**: `Any`, **count**: `Any`)
<a class="headerlink" href="#Uint16.set+4" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

<endpoint module="luxe: bytes" class="Uint16" signature="set(list : Any)"></endpoint>
<signature id="Uint16.set">Uint16.set(**list**: `Any`)
<a class="headerlink" href="#Uint16.set" title="Permanent link">¶</a></signature>
<span class='api_ret'>returns</span> `:::js unknown`
> no docs found   

